--- a/MAF.html
+++ b/MAF.html
@@ -95,7 +95,7 @@
     </div>
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12"width="292px"height="338px">
       <div class="thumbnail">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTNB0hYShvRHnONtanMa_xPxHg4dtlmKfln5g&usqp=CAU" class="img-circle" alt="Cinque Terre" width="400" height="400"> 
+        <img src="https://images.unsplash.com/photo-1532699342644-5cdc216ad80d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="img-circle" alt="Cinque Terre" width="300" height="300"> 
         <div class="clearfix" style="background: #fffff;padding: 10px;">
           <a href="stationary.html"><h3><b>Stationary</b></h3></a>
           <div class="media media--right clearfix">
@@ -106,7 +106,7 @@
   </div>
   <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12"width="292px"height="338px">
     <div class="thumbnail">
-      <img src="https://img.freepik.com/free-vector/buildings-cityscape-urban-scene-icon_18591-62777.jpg?size=626&ext=jpg" class="img-circle" alt="Cinque Terre" width="250" height="250"> 
+      <img src="https://images.unsplash.com/photo-1464938050520-ef2270bb8ce8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="img-circle" alt="Cinque Terre" width="350" height="350"> 
       <div class="clearfix" style="background: #fffff;padding: 10px;">
         <a href="others.html"><h3><b>others</b></h3></a>
         <div class="media media--right clearfix">
