--- a/clothing.html
+++ b/clothing.html
@@ -59,10 +59,34 @@ h2{
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&display=swap" rel="stylesheet">
+</head>
 <body>
+
+<div class="topnav" id="myTopnav">
+  <a href="MAF.html" class="active">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn">Our Services 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Hospitals and Medical Stores</a>
+      <a href="#">Clothing,Shoes,Accessories and Gift Items</a>
+      <a href="#">Hardware and Sofware Stores</a>
+	  <a href="#">Restaurants and Food Plaza</a>
+	  <a href="#">Stationary and Malls</a>
+    </div>
+  </div> 
+  <a href="about.html">About</a>
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
   <div class="background">
     <div class="transbox">
-      <p><h2>Clothing</h2></p>
+      <p><h2>CLOTHING</h2></p>
     </div>
   </div>
   
