--- a/medical.html
+++ b/medical.html
@@ -21,15 +21,15 @@ div.transbox p {
   color: #000000;
 }
 .accordion {
-  background-color: #eee;
-  color: #444;
+  background-color: teal;
+  color: white;
   cursor: pointer;
   padding: 20px;
   width: 100%;
   border: 2px solid beige;
-  text-align: left;
+  text-align: center;
   outline: none;
-  font-size: 15px;
+  font-size: 30px;
   transition: 0.4s;
 }
 
@@ -69,7 +69,7 @@ h2{
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="MAF.html" class="active">Home</a>
+  <a href="maf.html" class="active">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Our Services 
       <i class="fa fa-caret-down"></i>
@@ -82,7 +82,7 @@ h2{
 	  <a href="#">Stationary and Malls</a>
     </div>
   </div> 
-  <a href="about.html">About</a>
+  <a href="aboutweb.html">About</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
   <div class="background">
@@ -94,28 +94,63 @@ h2{
 
   
 
-<button class="accordion">Shop 1</button>
+<button class="accordion"><strong>PATLIPUTRA MEDICAL COLLEGE AND HOSPITAL(PMCH)</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+<p> <strong>GOVERNMENT HOSPITAL</strong></p> 
+  <p><strong>Address: B.C.C.L. Township, Koyla Nagar, Dhanbad, Jharkhand 826005</strong></p>
+  <p><strong>Hours: Sunday-Saturday	Open 24 hours</strong></p>
+  <p><strong>Phone: +913262230465</strong></p>
+  <p><strong>Website: https://www.pmchdhanbad.in</strong></p>
+  </div>
 
-<button class="accordion">Shop 2</button>
+<button class="accordion"><strong>ASARFI HOSPITAL</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+  <p><strong>PRIVATE HOSPITAL</strong></p>
+  <p><strong>Address: B Polytechnic, Baramuri, Dhanbad, Jharkhand 828130</strong></p>
+  <p><strong>Hours: Sunday-Saturday	Open 24 hours</strong></p>
+  <p><strong>Phone: 092343 02735</strong></p>
+  <p><strong>Website: https://www.asarfihospital.com</strong></p>
+  </div>
+  <button class="accordion"><strong>PRAGATI MEDICAL& RESEARCH CENTRE PVT LTD</strong></button>
+<div class="panel">
+<p><strong>PRIVATE HOSPITAL</strong></p>
+  <p><strong>Main Rd, Lohar Kulli, Saraidhella, Jharkhand 828127</strong></p>
+  <p><strong>Hours: Sunday-Saturday	Open 24 hours</strong></p>
+  <p><strong>+913262222611</strong></p>
+  </div>
+  <button class="accordion"><strong>MEDICAL STORE</strong></button>
+<div class="panel">
+  <p><strong>PHARMACY</strong></p>
+  <p><strong>Address: Kusum Vihar, Murli Nagar, Dhanbad, Jharkhand 826005</strong></p>
+  <p><strong>Hours: Sunday-Saturday(9am-9pm)</strong></p>
+  
+  <p><strong>Phone: 9632587410</strong></p>
+  </div>
+  <button class="accordion"><strong>NAYANDEEP EYE HOSPITAL</strong></button>
+<div class="panel">
+<p><strong>PRIVATE HOSPITAL</strong></p>
+  <p><strong>Address: Near Bhuipore Mandir, Tundi - Govindpur - Dhanbad Rd, Dhanbad, Jharkhand 828113</strong></p>
+  <p><strong>Hours: Sunday-Saturday	(9am–3pm, 4–7pm)</strong></p>
+  <p><strong>Phone: 9632587410</strong></p>
+  <p><strong>Website: https://www.nayandeepeyehospital.com</strong></p>
+  </div>
 
-<button class="accordion">Shop 3</button>
+
+<button class="accordion"><strong>SUN PATHOLAB X-RAY& IMAGING CENTRE</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 4</button>
+  <p><strong>PRIVATE PATHOLOGIST</strong></p>
+  <p><strong>Address: Durga Mandir, MIG B-35, Housing Colony Rd, Sardar Patel Nagar, Dhanbad, Jharkhand 82600</strong></p>
+  <p><strong>Hours: Sunday-Saturday(07:30am-07:00pm)</strong></p>
+  <p><strong>Phone: 093340 11772</strong></p>
+  </div>
+  <button class="accordion"><strong>Dr. R.M. PATHO CLINIC & RESEARCH CENTRE - TOP DIAGNOSTIC CENTRE IN DHANBAD</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 5</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+  <p><strong>PRIVATE PATHOLOGIST</strong></p>
+  <p><strong>Address: Harikunj Apartment,Saraidhela, Below Bank Of India, Ground Floor, Dhanbad, Jharkhand 82600</strong></p>
+  <p><strong>Hours: Sunday-Saturday(07:30am-09:00pm)</strong></p>
+  <p><strong>Phone: 078702 22021</strong></p>
+  </div>
+  
 
 
 <script>
