--- a/electronic.html
+++ b/electronic.html
@@ -21,15 +21,15 @@ div.transbox p {
   color: #000000;
 }
 .accordion {
-  background-color: #eee;
-  color: #444;
+  background-image: linear-gradient(100deg ,#bdc3c7 , #2c3e50 );
+  color: black;
   cursor: pointer;
   padding: 20px;
   width: 100%;
   border: 2px solid beige;
-  text-align: left;
+  text-align: center;
   outline: none;
-  font-size: 15px;
+  font-size: 30px;
   transition: 0.4s;
 }
 
@@ -94,28 +94,37 @@ h2{
 
   
 
-<button class="accordion">Shop 1</button>
+<button class="accordion"><strong>SHREE BALAJEE STEEL - HARDWARE AND STEEL SHOP IN DHANBAD</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p><strong>Address: Super Market, Katras Rd, Bank More, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours: Sunday-Saturday	(9am–8pm)</strong></p>
+  <p><strong>Phone: 094313 16612</strong></p>
+</div>
+<button class="accordion"><strong>SONY ELECTRONICS</strong></button>
+<div class="panel">
+  <p><strong>Address: Pandey Muhalla, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours:WEdnesday-Sunday(9am-9pm)</strong></p>
+  <p><strong></strong></p>
+</div>
+<button class="accordion"><strong>iTech® - Apple Authorised Store™</strong></button>
+<div class="panel">
+  <p><strong>Address: Centre Point Mall 15 & 16, 1ST FLOOR, Bank More, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours: Sunday-Saturday(11am-8pm)</strong></p>
+  <p><strong>Phone: 092641 60106</strong></p>
+</div>
+<button class="accordion"><strong>RAMSONS ELECTRONICS</strong></button>
+<div class="panel">
+  <p><strong>Address: 123, Urmila Towers, Dhanbad - Sindri Rd, Near Ozone Plaza, Bank More, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours: Monday-Saturday(11am-9Pm)</strong></p>
+  <p><strong>Phone: 099343 41429</strong></p>
 </div>
 
-<button class="accordion">Shop 2</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
 
-<button class="accordion">Shop 3</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 4</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 5</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+
 
 
 <script>
