--- a/medical.html
+++ b/medical.html
@@ -21,8 +21,8 @@ div.transbox p {
   color: #000000;
 }
 .accordion {
-  background-color: teal;
-  color: white;
+  background-image: linear-gradient(100deg ,#bdc3c7 , #2c3e50 );
+  color: black;
   cursor: pointer;
   padding: 20px;
   width: 100%;
