--- a/others.html
+++ b/others.html
@@ -21,15 +21,17 @@ div.transbox p {
   color: #000000;
 }
 .accordion {
-  background-color: #eee;
-  color: #444;
+   background-image: linear-gradient(#bdc3c7 , #2c3e50);
+  color: black;
+  font-family :Arial Narrow;
+  
   cursor: pointer;
   padding: 20px;
   width: 100%;
   border: 2px solid beige;
-  text-align: left;
+  text-align: center;
   outline: none;
-  font-size: 15px;
+  font-size: 30px;
   transition: 0.4s;
 }
 
@@ -81,7 +83,7 @@ h2{
 	  <a href="#">Stationary and Malls</a>
     </div>
   </div> 
-  <a href="about.html">About</a>
+  <a href="aboutweb.html">About</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
   <div class="background">
@@ -93,29 +95,125 @@ h2{
 
   
 
-<button class="accordion">Shop 1</button>
+<button class="accordion"><strong>STATE BANK OF INDIA</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<p><strong>PUBLIC SECTOR BANK</strong></p>
+<p><strong>Address: Usha Kunj, Chiragora Main Rd, Binod Nagar, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours: Monday-Saturday(10am–1:30pm, 2–4pm)</strong></p>
+<p><strong>Phone: 1800 425 3800</strong></p>
+<p><strong>Website: https://www.statebankofindia.co.in</strong></p>
 </div>
+<button class="accordion"><strong>BANK OF INDIA</strong></button>
+<div class="panel">
+<p><strong>PUBLIC SECTOR BANK</strong></p>
+<p><strong>Address: Grand Trunk Rd, Bank More, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours: Monday-Friday	(10am–1:30pm, 2–4pm)</strong></p>
+<p><strong>Phone: 1800 22 0229</strong></p>
+<p><strong>Website: https://www.bankofindia.co.in</strong></p>
+</div>
+<button class="accordion"><strong>ICICI BANK DHANBAD - BRANCH& ATM</strong></button>
+<div class="panel">
+<p><strong>PRIVATE BANK</strong></p>
+<p><strong>Address: Municipal Holding No 576/577 Bank More, Shastri Nagar, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours: Monday-Saturday(09:30am-04:30pm)</strong></p>
+<p><strong>Phone: 081026 67777</strong></p>
+<p><strong>Website:  https://www.icicibank.com</strong></p>
+</div>
+<button class="accordion"><strong>BOI ATM</strong></button>
+<div class="panel">
+<p><strong>OPEN 24hrs</strong></p>
+<p><strong>Address: Sardar Patel Nagar, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>Website: https://www.bankofindia.co.in</strong></p>
+</div>
+<button class="accordion"><strong>AXIS BANK ATM</strong></button>
+<div class="panel">
+<p><strong>OPEN 24hrs</strong></p>
+<p><strong>Address: Shop No K, 30, Housing Colony Rd, opposite Allahabad Bank, Bank More, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>Phone: 1860 500 5555</strong></p>
+<p><strong>Website: https://www.axisbank.com</strong></p>
+</div>
+<button class="accordion"><strong>PUNJAB NATIONAL BANK ATM</strong></button>
+<div class="panel">
+<p><strong>OPEN 24hrs</strong></p>
+<p><strong>Address: Divisional Railway Manager Office, Station Road In Front Of, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>Website:https://www.pnb.in</strong></p>
+</div>
+<button class="accordion"><strong>BHARAT PETROLEUM, PETROL PUMP -LAXMI SERVICE STATION</strong></button>
+<div class="panel">
+<p><strong>Address: BANK MORE, DHANBAD,DIST DH, Dhanbad, Jharkhand 826001
+</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours: Sunday-Saturday(06:00am-10:30pm)</strong></p>
+<p><strong>Website:https://www.bharatpetroleum.com </strong></p>
+</div>
+<button class="accordion"><strong>HINDUSTAN PETROLEUM</strong></button>
+<div class="panel">
+<p><strong>Address: Pandey Muhalla, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours: Sunday-Saturday(06:30am-10pm)</strong></p>
+<p><strong>Website: https://www.hindustanpetroleum.com</strong></p>
+</div>
+<button class="accordion"><strong>RELIANCE PETROLEUM</strong></button>
+<div class="panel">
+<p><strong>Address: Shastri Nagar,Dhanbad Jharkhand</strong></p>
+<p><strong>OPEN 24hrs</strong></p>
+<p><strong>Phone: +917281000471</strong></p>
+<p><strong>Website: https://www.reliancepetroleum.com</strong></p>
+</div>
+<button class="accordion"><strong>DHANBAD NAGAR NIGAM OFFICE</strong></button>
+<div class="panel">
+<p><strong>Address: Luby Circular Rd, Kasturba Nagar, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours:Monday-Saturday(10am-05pm)</strong></p>
+<p><strong>Phone: 9632587410</strong></p>
+<p><strong>Website: https;//www.dhanbad.nic.in</strong></p>
+</div>
+<button class="accordion"><strong>DC OFFICE</strong></button>
+<div class="panel">
+<p><strong>Address: Station Road, Pandey Muhalla, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>Hours: Monday-Saturday(10am-5pm)</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Phone: 0326 231 2401</strong></p>
+<p><strong>Website:https://www.dhanbad.nic.in</strong></p>
+</div>
+<button class="accordion"><strong>POLICE STATION</strong></button>
+<div class="panel">
+<p><strong>Address 1:National Highway 32, Bank More, Dhanbad, Jharkhand 826001; Address 2:CMPF Colony, Dhanbad, Jharkhand 826003 ;Address 3:NH 32, near General Post Office, Kasturba Nagar, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>OPEN 24hrs</strong></p>
+<p><strong>Phone 1: 094317 06392; Phone 2: 076578 90234 ; Phone 3: 075680 98767</strong></p>
+<p><strong>Website: htttps://www.jhpolice.gov.in</strong></p>
+</div>
+<button class="accordion"><strong>CIVIL COURT DHANBAD</strong></button>
+<div class="panel">
+<p><strong>Address: NH-32, Pandey Muhalla, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours: Monday-Saturday(10am-05pm)</strong></p>
+<p><strong>Website: https://www.district.ecourts.gov.in</strong></p>
+</div>
+<button class="accordion"><strong>BIG BAZAAR</strong></button>
+<div class="panel">
+<p><strong>Address: Sahadeo Niwas Sahayogi Nagar Sec-2, Sugiadih, CCWO Colony, Dhanbad, Jharkhand 828127</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours: Sunday-Saturday(11am-11pm)</strong></p>
+<p><strong>Website: https://www.bigbazaar.com</strong></p>
+</div>
+<button class="accordion"><strong>OZONE GALLERIA</strong></button>
+<div class="panel">
+<p><strong>Address:The Ozone Galleria Mall, NH-32, Sugiadih, Sahayogi Nagar Sector II, Dhanbad, Jharkhand 828127</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours: Sunday-Saturday(09am-11pm)</strong></p>
+<p><strong>Website : https://www.oxzonegalleria.com</strong></p>
+</div>
+<button class="accordion"><strong>CITY CENTRE - DHANBAD</strong></button>
+<div class="panel">
+<p><strong>Address: Luby Circular Rd, Jay Prakash Nagar, Jharudih, Dhanbad, Jharkhand 826001</strong></p>
+<p><strong>OPEN</strong></p>
+<p><strong>Hours : Sunday-Saturday(11am-11pm)</strong></p>
 
-<button class="accordion">Shop 2</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
-
-<button class="accordion">Shop 3</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 4</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 5</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-
 
 <script>
 var acc = document.getElementsByClassName("accordion");
