--- a/restaurant.html
+++ b/restaurant.html
@@ -21,15 +21,16 @@ div.transbox p {
   color: #000000;
 }
 .accordion {
-  background-color: #eee;
+  background-image: linear-gradient(100deg ,#bdc3c7 , #2c3e50 );
   color: #444;
+  color: black;
   cursor: pointer;
   padding: 20px;
   width: 100%;
   border: 2px solid beige;
-  text-align: left;
+  text-align: center;
   outline: none;
-  font-size: 15px;
+  font-size: 30px;
   transition: 0.4s;
 }
 
@@ -93,27 +94,48 @@ h2{
 
   
 
-<button class="accordion">Shop 1</button>
+<button class="accordion"><strong>
+THE BAITHAK</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+  <p><strong>Address: Nalanda Trade Centre, near Big Bazaar, Saraidhella, Jharkhand 828127</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours: Sunday-Saturday	(10am–11pm)</strong></p>
+  <p><strong>Phone: 070040 59421</strong></p>
+  <p><strong>Available on Swiggy</strong></p>
+  </div>
+  <button class="accordion"><strong>KHOOBSURAT FREE FIRE FOOD FACTORY</strong></button>
+<div class="panel">
+  <p><strong>Address: Shop No, 4B, Bekar Bandh Rd, Bekarbandh, Kasturba Nagar, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours: Sunday-Saturday(11am-11pm)</strong></p>
+  <p><strong>Phone: 9632587410</strong></p>
+  <p><strong>Available on Zomato and Swiggy</strong></p>
+  </div>
+  <button class="accordion"><strong>LONDON STRRET BISTRO</STRONG></button>
+<div class="panel">
+  <p><strong>Address: 2nd Centre Point Mall, Katras Rd, Bank More, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours: Sunday-Saturday(11am-11pm)</strong></p>
+  <p><strong>Phone: 097089 11144</strong></p>
+  <p><strong>Available on Zomato</strong></p>
+  </div>
+  <button class="accordion"><strong>MADHULIKA SWEETS</strong></button>
+<div class="panel">
+  <p><strong>Address: Shanti Bhawan, 9, Jharia Rd, Near, Bank More, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours:Sunday-Saturday	(8am–9:30pm)</strong></p>
+  <p><strong>Phone: 089874 12323</strong></p>
+  <p><strong>Available on Swiggy and Zomato</strong></p>
+  </div>
 
-<button class="accordion">Shop 2</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
 
-<button class="accordion">Shop 3</button>
+<button class="accordion"><strong>PRAGATI FOOD PLAZA</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 4</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 5</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p><strong>Address: National Highway 32, Lohar Kulli, Dhanbad, Jharkhand 826005</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours:Sunday-Saturday(9am-11pm)
+  <p><strong>Phone: 094311 96514</strong></p>
+  <p><strong>Not available for home delivery</strong></p>
 </div>
 
 
