--- a/stationary.html
+++ b/stationary.html
@@ -21,15 +21,15 @@ div.transbox p {
   color: #000000;
 }
 .accordion {
-  background-color: #eee;
-  color: #444;
+  background-image:linear-gradient(100deg ,#bdc3c7 , #2c3e50 );;
+  color: black;
   cursor: pointer;
   padding: 20px;
   width: 100%;
   border: 2px solid beige;
-  text-align: left;
+  text-align: center;
   outline: none;
-  font-size: 15px;
+  font-size: 30px;
   transition: 0.4s;
 }
 
@@ -93,28 +93,33 @@ h2{
 
   
 
-<button class="accordion">Shop 1</button>
+<button class="accordion"><strong>STATE LIBRARY</strong></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p><strong>Address: Sardar Patel Nagar, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>TEMPORARILY CLOSED</strong></p>
+  <p><strong>Phone :932587410</strong></p>
+</div>
+<button class="accordion"><strong>DHANBAD BOOK STORES</strong></button>
+<div class="panel">
+  <p><strong>Address: HE School road, Near, Randhir Verma Chowk, Hirapur, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours :Monday-Saturday(9am-9pm)</strong></p>
+  <p><strong>Phone: 097091 58668</strong></p>
+</div>
+<button class="accordion"><strong>DEZI STATIONARY & GIFT STORE</strong></button>
+<div class="panel">
+  <p><strong>Address: Shop No.40, New Mini Market, I.S.M., Gate-1, Main Road, Dhanbad, Jharkhand</strong></p>
+  <p><strong>OPEN</strong></p>
+  <p><strong>Hours: Monday-Wednesday(10am-9pm); Friday-Saturday(11am-2pm ; 4pm-6pm)</strong></p>
+  <p><strong>Phone: 095040 61237</strong></p>
+</div><button class="accordion"><strong>ABHIJEET BOOK STORE( Buy And Sale In Old And New Books)</strong></button>
+<div class="panel">
+  <p><strong>Address: Abhoya Sundri School Road, Hirapur, Dhanbad, Jharkhand 826001</strong></p>
+  <p><strong>TEMPORARILY CLOSED</strong></p>
+  <p><strong>Phone: 084342 35116</strong></p>
 </div>
 
-<button class="accordion">Shop 2</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
 
-<button class="accordion">Shop 3</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 4</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button class="accordion">Shop 5</button>
-<div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
 
 
 <script>
